# subdiff

./: Cargo.toml  README.md
doc/: subdiff.1  subdiff.md
src/: conf.rs  hunked.rs  main.rs  tests.rs  wdiff.rs
