[package]
name = "subdiff"
description = "A diff-like utility that considers the selected part of a line"
version = "0.1.0"
authors = ["Angelos Oikonomopoulos"]
license = "GPL-3.0"
repository = "https://github.com/aoikonomopoulos/subdiff"
keywords = ["diff"]
categories = ["command-line-utilities"]

[dependencies]
lcs-diff = "0.1.1"
itertools = "0.7.8"
clap = "2"
regex = "1.0.0"
chrono = "0.4"

[dev-dependencies]
temporary = "0.6.3"
rayon = "1.0.0"